--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,379 +1,29 @@
 body {
-    background: #181818;
-    padding: 0px;
-    margin: 0px;
-  }
-  * {
-    box-sizing: border-box;
-  }
-  p {
-    margin: 0px;
-  }
-  ul {
-    padding: 0px;
-  }
-  h1,
-  h2,
-  h3,
-  h4,
-  h5 {
-    margin: 0px;
-  }
-  .work__speed {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .top__info-wrap {
-    display: flex;
-    margin-top: 30px;
-    align-items: center;
-    margin-bottom: 126px;
-    justify-content: center;
-  }
-  .logo_img {
-    margin-right: 136px;
-  }
-  .navogation__list {
-    list-style: none;
-    display: flex;
-  }
-  .navigation__list-item {
-    margin-right: 51px;
-  }
-  .navigation__list-item:last-child {
-    margin-right: 229px;
-  }
-  .navigation__link {
-    text-decoration: none;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-  }
-  .link__button-login {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 25px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    padding: 10px 40px;
-    border: 1px solid #ffffff;
-    filter: drop-shadow(0px 4px 31px rgba(0, 0, 0, 0.15));
-    background: transparent;
-  }
-  .top__title-wrap {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-  .top__title {
-    width: 709px;
-    height: 176px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 80px;
-    line-height: 88px;
-    letter-spacing: 0.2px;
-    text-align: center;
-    color: #ffffff;
-    margin-bottom: 37px;
-  }
-  .top__subtitle {
-    margin-bottom: 95px;
-    width: 582px;
-    height: 60px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    text-align: center;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-  }
-  .top__link-button {
-    width: 387px;
-    height: 65px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    justify-content: space-between;
-    text-decoration: none;
-    margin-bottom: 35px;
-  }
-  .button__free {
-    padding: 20px 40px;
-    background: #4452fe;
-    box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
-    border: 1px solid #4452fe;
-    color: #ffffff;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 25px;
-    letter-spacing: 0.2px;
-  }
-  .botton__more {
-    padding: 20px 40px;
-    background: transparent;
-    box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
-    border: 1px solid white;
-    color: #ffffff;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 25px;
-    letter-spacing: 0.2px;
-  }
-  .work__speed-wrap {
-    height: 841px;
-    display: flex;
-    justify-content: center;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #0e0e0e 66.15%);
-  }
-  .work__speed-img {
-    margin-bottom: 162px;
-  }
-  .features {
-    height: 988px;
-    margin-top: 162px;
-    margin-bottom: 221px;
-  }
-  .features__wrap {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 602px;
-    height: 149px;
-    margin: 0px auto;
-  }
-  .features__title {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 52px;
-    line-height: 62px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    margin-bottom: 27px;
-  }
-  .features__subtext {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-  }
-  .features__information-wrap {
-    display: flex;
-    justify-content: center;
-    margin-top: 80px;
-    margin-bottom: 60px;
-  }
-  .features__picture {
-    margin-right: 47px;
-  }
-  .features__list {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .features__list-item {
-    width: 269px;
-    height: 196px;
-  }
-  .item__icon-title {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  .title__one {
-    width: 153px;
-  }
-  .title__two {
-    width: 87px;
-  }
-  .item__icon {
-    margin-right: 13px;
-  }
-  .item__title {
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0.1px;
-    color: #ffffff;
-  }
-  .item__text {
-    width: 249px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    margin-bottom: 45px;
-  }
-  .сontents {
-    margin-top: 60px;
-    margin-bottom: 160px;
-  }
-  .сontents__wrap {
-    width: 591px;
-    height: 162px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    margin: 0px auto;
-  }
-  .contents__title {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 52px;
-    line-height: 62px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    margin-bottom: 20px;
-  }
-  .contents__subtext {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    margin-bottom: 56px;
-  }
-  .сontents__list {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    margin-bottom: 50px;
-  }
-  .сontents__list-item {
-    width: 476px;
-    height: 624px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    background: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0px 4px 31px rgba(0, 0, 0, 0.15);
-    padding: 50px 48px 40px 48px;
-  }
-  .сontents__list-item:nth-child(1) {
-    margin-right: 33px;
-  }
-  .content__title-work {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0.1px;
-    color: #000000;
-    margin-bottom: 30px;
-  }
-  .content__text {
-    width: 255px;
-    height: 72px;
-    margin: 0px auto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: 0.2px;
-    color: #5c5c5c;
-  }
-  .text__content {
-    margin-bottom: 40px;
-  }
-  .content__text-margin {
-    margin-bottom: 67px;
-  }
-  .link {
-    margin-bottom: 57px;
-  }
-  .link__content {
-    margin-bottom: 30px;
-  }
-  .content__button {
-    background: #4452fe;
-    border: 1px solid #4452fe;
-    padding: 13px 46px;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 25px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-  }
-  .gallery {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .gallery__content-wrap {
-    width: 591px;
-    height: 162px;
-    margin-top: 50px;
-    margin-bottom: 44px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .gallery__title {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 52px;
-    line-height: 62px;
-    letter-spacing: 0.2px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    margin-bottom: 20px;
-  }
-  .gallery__text {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    text-align: center;
-    margin-bottom: 54px;
-  }
-  .gallery__list-card {
-    list-style: none;
-  }
-  .gallery__list-item {
-    height: 285px;
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 44px;
-  }
-  .gallery__list-items {
-    display: flex;
-    width: 1087px;
-    height: 285px;
-    margin-bottom: 57px;
-  }
-  .gallery__button {
-    padding: 13px 40px;
-    background: transparent;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 25px;
-    letter-spacing: 0.2px;
-    color: #ffffff;
-    border: 1px solid #FFFFFF;
-    margin-bottom: 223px;
-  }
-  
+  background: #181818;
+  padding: 0px;
+  margin: 0px;
+}
+* {
+  box-sizing: border-box;
+}
+p {
+  margin: 0px;
+}
+ul {
+  padding: 0px;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0px;
+}
+@import "./section/_work-speed.scss";
+@import "./section/_features.scss";
+@import "./section/_contents.scss";
+@import "./section/_gallery.scss";
+@import "./section/_partners.scss";
+@import "./section/_testimonials.scss";
+@import "./section/_open__type.scss";
+@import "./section/_footer.scss";
