--- a/css/index.css
+++ b/css/index.css
@@ -1,24 +1,7 @@
 @charset "UTF-8";
-body {
-  background: #181818;
-  padding: 0px;
-  margin: 0px; }
-
-* {
-  box-sizing: border-box; }
-
-p {
-  margin: 0px; }
-
-ul {
-  padding: 0px; }
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  margin: 0px; }
+.header {
+  overflow: hidden;
+  position: relative; }
 
 .work__speed {
   display: flex;
@@ -26,6 +9,7 @@ h5 {
   justify-content: center; }
 
 .top__info-wrap {
+  position: relative;
   display: flex;
   padding-top: 30px;
   align-items: center;
@@ -67,6 +51,35 @@ h5 {
   filter: drop-shadow(0px 4px 31px rgba(0, 0, 0, 0.15));
   background: transparent; }
 
+.header__mobile-wrap {
+  display: none; }
+
+.button__mobile {
+  background: transparent;
+  border: transparent;
+  transition: 0.3s ease; }
+
+.nav__mobile-list {
+  right: -1000px;
+  list-style: none;
+  position: absolute;
+  bottom: 340px;
+  top: 100px;
+  text-align: center;
+  background: #3947d8;
+  width: 25%;
+  border-radius: 30px;
+  transition: 1s; }
+
+.nav__mobile-item {
+  padding: 3px 0px; }
+
+.nav__mobile-link {
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 18px;
+  letter-spacing: 3.8px; }
+
 .top__title-wrap {
   display: flex;
   justify-content: center;
@@ -74,8 +87,7 @@ h5 {
   align-items: center; }
 
 .top__title {
-  width: 709px;
-  height: 176px;
+  max-width: 709px;
   font-style: normal;
   font-weight: 500;
   font-size: 80px;
@@ -87,8 +99,7 @@ h5 {
 
 .top__subtitle {
   margin-bottom: 95px;
-  width: 582px;
-  height: 60px;
+  max-width: 582px;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -130,13 +141,51 @@ h5 {
   letter-spacing: 0.2px; }
 
 .work__speed-wrap {
-  height: 841px;
   display: flex;
   justify-content: center;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #0e0e0e 66.15%); }
 
 .work__speed-img {
-  margin-bottom: 162px; }
+  margin-bottom: 162px;
+  width: 100%;
+  object-fit: contain; }
+
+@media screen and (max-width: 1200px) {
+  .navogation__list {
+    display: none; }
+  .nav__mobile-list.active {
+    right: 50px;
+    height: 111px;
+    width: 220px; }
+  .button__mobile.active {
+    transform: rotate(180deg); }
+  .logo_img {
+    margin-right: 0px; }
+  .top__info-wrap {
+    justify-content: space-around; }
+  .header__mobile-wrap {
+    display: block; } }
+
+@media screen and (max-width: 600px) {
+  .top__title {
+    max-width: 294px;
+    font-size: 52px;
+    line-height: 62px; }
+  .top__subtitle {
+    max-width: 380px; }
+  .top__link-button {
+    flex-direction: column; }
+  .button__free {
+    margin-right: 0px;
+    margin-bottom: 21px; } }
+
+@media screen and (max-width: 430px) {
+  .top__info-wrap {
+    flex-direction: column; }
+  .header__mobile-wrap {
+    position: absolute;
+    right: 20px;
+    top: 60px; } }
 
 .features {
   padding-top: 162px;
@@ -217,6 +266,24 @@ h5 {
   color: #ffffff;
   margin-bottom: 45px; }
 
+@media screen and (max-width: 1100px) {
+  .features__information-wrap {
+    flex-direction: column; }
+  .features__picture {
+    margin-right: 0px;
+    margin: 0px auto; }
+  .features__img {
+    width: 100%;
+    margin-bottom: 70px; }
+  .features__wrap {
+    max-width: 602px;
+    width: 100%; } }
+
+@media screen and (max-width: 764px) {
+  .features__subtext {
+    max-width: 400px;
+    margin: 0px auto; } }
+
 .сontents {
   padding-top: 60px;
   margin-bottom: 160px; }
@@ -276,7 +343,6 @@ h5 {
   margin-bottom: 30px; }
 
 .content__text {
-  width: 255px;
   margin: 0px auto;
   font-style: normal;
   font-weight: normal;
@@ -310,6 +376,23 @@ h5 {
   line-height: 25px;
   letter-spacing: 0.2px;
   color: #ffffff; }
+
+@media screen and (max-width: 1111px) {
+  .сontents__list {
+    flex-wrap: wrap;
+    padding: 0px 10px; }
+  .сontents__list-item:nth-child(1) {
+    margin-right: 10px;
+    margin-bottom: 33px; }
+  .сontents__wrap {
+    max-width: 591px;
+    width: 100%; } }
+
+@media screen and (max-width: 764px) {
+  .contents__subtext {
+    max-width: 288px;
+    padding-bottom: 54px;
+    margin: 0px auto; } }
 
 .gallery {
   display: flex;
@@ -378,6 +461,33 @@ h5 {
   color: #ffffff;
   border: 1px solid #FFFFFF; }
 
+@media screen and (max-width: 1200px) {
+  .gallery__picture {
+    width: 100%;
+    object-fit: contain; }
+  .midle {
+    width: 100%; } }
+
+@media screen and (max-width: 1100px) {
+  .gallery__list-items {
+    display: none; }
+  .gallery__img {
+    margin-right: 10px; } }
+
+@media screen and (max-width: 980px) {
+  .gallery__content-wrap {
+    max-width: 591px;
+    width: 100%; }
+  .gallery__list-item {
+    flex-direction: column; }
+  .gallery__img {
+    margin-right: 0px;
+    margin-bottom: 33px; } }
+
+@media screen and (max-width: 768px) {
+  .gallery__text {
+    max-width: 350px; } }
+
 .partners {
   justify-content: center;
   align-items: center;
@@ -429,6 +539,26 @@ h5 {
   letter-spacing: 0.2px;
   color: #ffffff;
   margin-bottom: 50px; }
+
+@media screen and (max-width: 980px) {
+  .partners__title-wrap {
+    max-width: 591px;
+    width: 100%; }
+  .partners__subtitle-text {
+    width: 100%; }
+  .partners__list {
+    max-width: 500px;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center; }
+  .partners__list-item {
+    margin-bottom: 57px; } }
+
+@media screen and (max-width: 764px) {
+  .partners__subtitle-text {
+    max-width: 329px;
+    margin: 0px auto;
+    padding-bottom: 64px; } }
 
 .testimonials {
   display: flex;
@@ -500,6 +630,21 @@ h5 {
   letter-spacing: 0.2px;
   color: #ffffff; }
 
+@media screen and (max-width: 888px) {
+  .testimonials__list {
+    max-width: 805px;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: center; }
+  .testimonials__list-item {
+    margin-right: 0px; } }
+
+@media screen and (max-width: 774px) {
+  .testimonials__list {
+    flex-direction: column;
+    max-width: 352px;
+    width: 100%; } }
+
 .open__type {
   background: #181818;
   margin-bottom: 100px; }
@@ -509,7 +654,8 @@ h5 {
   justify-content: center;
   align-items: center;
   background: #343434;
-  width: 1178px;
+  max-width: 1178px;
+  width: 100%;
   margin: 0px auto;
   border-radius: 33px;
   margin-bottom: 80px; }
@@ -537,6 +683,26 @@ h5 {
   color: #ffffff;
   background: #4452FE;
   border: 1px solid #4452FE; }
+
+.open__type-icon {
+  width: 100%; }
+
+@media screen and (max-width: 1200px) {
+  .open__type {
+    padding: 0px 20px; } }
+
+@media screen and (max-width: 888px) {
+  .open__type-content {
+    flex-direction: column; }
+  .open__type-title {
+    max-width: 336px;
+    text-align: center; }
+  .open__type-inner {
+    text-align: center; } }
+
+@media screen and (max-width: 505px) {
+  .open__type-inner {
+    padding: 61px 0px; } }
 
 .footer {
   background: #181818;
@@ -626,3 +792,41 @@ h5 {
 
 .networks__img {
   margin-right: 32px; }
+
+@media screen and (max-width: 970px) {
+  .categories__wrap {
+    padding: 0px 10px; } }
+
+@media screen and (max-width: 888px) {
+  .footer {
+    flex-direction: column;
+    padding-left: 115px; }
+  .categories__wrap {
+    flex-direction: column; }
+  .fingertipe__list {
+    margin-right: 0px; }
+  .resources__list {
+    margin-right: 0px; }
+  .about__list {
+    margin-right: 0px; } }
+
+body {
+  background: #181818;
+  padding: 0px;
+  margin: 0px; }
+
+* {
+  box-sizing: border-box; }
+
+p {
+  margin: 0px; }
+
+ul {
+  padding: 0px; }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0px; }
