--- a/scss/section/_contents.scss
+++ b/scss/section/_contents.scss
@@ -56,8 +56,7 @@
     color: #000000;
     margin-bottom: 30px;
   }
-  .content__text {
-    width: 255px;
+  .content__text { 
     margin: 0px auto;
     font-style: normal;
     font-weight: normal;
@@ -91,4 +90,25 @@
     line-height: 25px;
     letter-spacing: 0.2px;
     color: #ffffff;
+  }
+  @media screen and (max-width:1111px) {
+    .сontents__list {
+      flex-wrap: wrap;
+      padding: 0px 10px;
+    }
+    .сontents__list-item:nth-child(1) {
+      margin-right: 10px;
+      margin-bottom: 33px;
+    }
+    .сontents__wrap {
+      max-width: 591px;
+      width: 100%;
+    }
+  }
+  @media screen and (max-width:764px) {
+    .contents__subtext {
+      max-width: 288px;
+      padding-bottom:54px;
+      margin:0px auto;
+    }
   }
