--- a/scss/section/_footer.scss
+++ b/scss/section/_footer.scss
@@ -87,3 +87,26 @@
 .networks__img {
   margin-right: 32px;
 }
+@media screen and (max-width:970px) {
+  .categories__wrap {
+    padding: 0px 10px;
+  }
+}
+@media screen and (max-width:888px) {
+  .footer {
+    flex-direction: column;
+     padding-left: 115px;
+  }
+  .categories__wrap {
+    flex-direction: column;
+  }
+  .fingertipe__list {
+    margin-right: 0px;
+  }
+  .resources__list {
+    margin-right: 0px;
+  }
+  .about__list {
+    margin-right: 0px;
+  }
+}
