--- a/scss/section/_partners.scss
+++ b/scss/section/_partners.scss
@@ -30,10 +30,16 @@
     display: flex;
     list-style: none;
     margin-bottom: 55px;
+
+    .partners__list-item {
+      margin-right: 74px;
+    }
+
+    &.closed {
+      display: none;
+    }
   }
-  .partners__list-item {
-    margin-right: 74px;
-  }
+  
   .partners__list-item:nth-child(6) {
     margin-right: 0px;
   }
@@ -50,6 +56,7 @@
     color: #ffffff;
     margin-bottom: 50px;
   }
+  
   @media screen and (max-width:980px) {
     .partners__title-wrap {
       max-width: 591px;
